@@ -39,6 +39,7 @@ popup.file=To File
 popup.keyboard=Keyboard
 popup.connections=Connections
 popup.shortCuts=Short Cuts
+popup.stopScript=Stop Current
 
 # Hex Map literals
 hm.title=Hex Map
@@ -246,6 +247,7 @@ key.[close]=Close Session
 key.[print]=Print Screen
 key.[transfer]=File Transfer
 key.[e-mail]=Send Screen via E-Mail
+key.[runscript]=Run Script
 key.labelMap=Map Key
 key.labelDone=Done
 key.labelRemove=Remove
